--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,8 @@
     <coveralls.version>3.0.1</coveralls.version>
     <el.version>3.0.0</el.version>
     <findbugs-annotations.version>3.0.0</findbugs-annotations.version>
-    <findbugs.version>3.0.0</findbugs.version>
+    <findbugs.version>3.0.1</findbugs.version>
+    <findbugs-contrib.version>6.0.0</findbugs-contrib.version>
     <h2.version>1.4.186</h2.version>
     <hamcrest.version>1.3</hamcrest.version>
     <hibernate.validator.version>5.1.3.Final</hibernate.validator.version>
@@ -101,7 +102,7 @@
     <javassist.version>3.19.0-GA</javassist.version>
     <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
     <javax.ws.rs.version>2.0.1</javax.ws.rs.version>
-    <jetty.version>9.2.9.v20150224</jetty.version>
+    <jetty.version>9.2.10.v20150310</jetty.version>
     <jodatime.version>2.7</jodatime.version>
     <junit.version>4.12</junit.version>
     <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
@@ -128,7 +129,7 @@
     <maven-source.version>2.4</maven-source.version>
     <maven-surefire.version>2.18.1</maven-surefire.version>
     <maven-swagger.version>2.3.3</maven-swagger.version>
-    <metrics.version>3.1.0</metrics.version>
+    <metrics.version>3.1.1</metrics.version>
     <mockito.version>1.10.19</mockito.version>
     <multithreadedtc.version>1.01</multithreadedtc.version>
     <mysql.version>5.1.34</mysql.version>
@@ -246,6 +247,13 @@
             <findbugsXmlOutput>true</findbugsXmlOutput>
             <effort>Max</effort>
             <threshold>Low</threshold>
+            <plugins>
+              <plugin>
+                <groupId>com.mebigfatguy.fb-contrib</groupId>
+                <artifactId>fb-contrib</artifactId>
+                <version>${findbugs-contrib.version}</version>
+              </plugin>
+            </plugins>
           </configuration>
           <dependencies>
             <dependency>
