Add Jetty JMX support. Configure jetty with configuration file.

--- a/nflow-spring-boot/src/main/resources/application.properties
+++ b/nflow-spring-boot/src/main/resources/application.properties
@@ -5,3 +5,12 @@ security.basic.enabled=false
 management.security.enabled=false
 
 nflow.test.name="jee"
+
+extra.resource.directories=
+spring.profiles.active=jmx
+
+host=0.0.0.0
+port=7400
+terminate.timeout=30
+
+nflow.rest.allow.origin=*
