--- a/nflow-spring-boot/pom.xml
+++ b/nflow-spring-boot/pom.xml
@@ -262,6 +262,10 @@
       <artifactId>mysql-connector-java</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-jmx</artifactId>
+    </dependency>
   </dependencies>
   <profiles>
     <profile>
