--- a/nflow-spring-boot/src/main/resources/application.properties
+++ b/nflow-spring-boot/src/main/resources/application.properties
@@ -7,7 +7,7 @@ management.security.enabled=false
 nflow.test.name="jee"
 
 extra.resource.directories=
-spring.profiles.active=jmx
+spring.profiles.active=jmx,nflow.db.h2
 
 host=0.0.0.0
 port=7400
