--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
     <nexus-staging-maven.version>1.6.6</nexus-staging-maven.version>
     <nitor-matchers.version>1.3</nitor-matchers.version>
     <postgresql.version>9.4.1208.jre7</postgresql.version>
+    <postgresql-embedded.version>1.10</postgresql-embedded.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <slf4j.version>1.7.18</slf4j.version>
@@ -749,6 +750,11 @@
         <groupId>com.googlecode.multithreadedtc</groupId>
         <artifactId>multithreadedtc</artifactId>
         <version>${multithreadedtc.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>ru.yandex.qatools.embed</groupId>
+        <artifactId>postgresql-embedded</artifactId>
+        <version>${postgresql-embedded.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
